# arrayfire-extras

./: CMakeLists.txt
include/: opencv.h  opencv3.h  stl.h  thrust.h
test/: CMakeLists.txt
test/CMakeModules/: build_gtest.cmake
test/opencv/: CMakeLists.txt  interop.cpp
test/stl/: CMakeLists.txt  interop.cpp
test/thrust/: CMakeLists.txt  interop.cpp
